--- a/_posts/2019-9-12-cisco.md
+++ b/_posts/2019-9-12-cisco.md
@@ -7,7 +7,7 @@ image: /assets/images/aij1.png
 
 #### Laporan AIJ vlan 2 Jaringan
 
-<img src="/assets/images/aij0.png">
+<img src="/assets/images/vlan0.png">
 
 #### Nama :
 Dhimas Bagus Prayoga
