--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,4 +6,4 @@ show_tile: false
 
 <br><br><br><br><br>
 
-<p align="Center"> <font size="48px"> Page not found! :( </font> <p/>
+<p align="Center"> <font size="48px"> 404 Kuntul ! :( </font> <p/>
