--- a/_posts/2020-3-12-Havoc1.md
+++ b/_posts/2020-3-12-Havoc1.md
@@ -5,7 +5,7 @@ description: Havoc-OS has release for lavender <3
 image: /assets/images/Havoc_Home.jpg
 ---
 
-# Havoc-OS Unofficial
+# Havoc-OS Official
 ## Ver 3.3
 ## for Lavender
 Source Sync : Thu, Mar 12
